# Team7Robotics

./: .gitignore  COMMANDS.txt  README.md  Task1 Environment.world  Task2 Environment 1 up left.world  Task2 Environment 2 down left.world  Task2 Environment 3 down right.world  Task2 Environment 4 up right.world  dqn_agent.py  dqn_environment.py  dqn_gazebo.py  dqn_test.py  drone_goals.py  human_detector.py  image_control.py  spawn_drone.py  stage1_episode100.h5  stage1_episode100.json  stage1_episode1100.h5  stage1_episode1100.json  stage1_episode1200.h5  stage1_episode1200.json  stage1_episode1300.h5  stage1_episode1400.h5  stage1_episode1400.json  stage1_episode1600.h5  stage1_episode1600.json  stage1_episode1800.json  stage1_episode1900.h5  stage1_episode200.h5  stage1_episode200.json  stage1_episode2000.json  stage1_episode2100.h5  stage1_episode2100.json  stage1_episode2300.json  stage1_episode2400.h5  stage1_episode2400.json  stage1_episode2600.h5  stage1_episode2600.json  stage1_episode2700.h5  (+27 more)
Training files/: stage1_episode100.h5  stage1_episode1000.h5  stage1_episode1000.json  stage1_episode1300.json  stage1_episode1500.h5  stage1_episode1500.json  stage1_episode1700.h5  stage1_episode1700.json  stage1_episode1800.h5  stage1_episode1900.json  stage1_episode200.h5  stage1_episode2000.h5  stage1_episode2200.h5  stage1_episode2200.json  stage1_episode2300.h5  stage1_episode2500.h5  stage1_episode2500.json  stage1_episode300.json  stage1_episode3000.json  stage1_episode3100.h5  (+24 more)
dev_ws/src/my_msgs/: CMakeLists.txt  package.xml
dev_ws/src/my_msgs/srv/: Goal.srv
(+103 files in other folders)
